tests/baselines/reference/jsdocParamTagInvalid.errors.txt
/a.js(1,21): error TS8024: JSDoc '@param' tag has name 'colour', but there is no parameter with that name.


==== /a.js (1 errors) ====
    /** @param {string} colour */
                        ~~~~~~
!!! error TS8024: JSDoc '@param' tag has name 'colour', but there is no parameter with that name.
    function f(color) {}
    